--- a/pages/day1.module.css
+++ b/pages/day1.module.css
@@ -1,12 +1,12 @@
 .container {
-  width: 1000px;
+  width: 100%;
   height: 100%;
 }
 
 .header {
   background-color: lightblue;
   padding: 10px;
-  font-size: 24px;
+  font-size: 1rem;
 }
 
 .main {
@@ -16,7 +16,7 @@
 .section {
   background-color: lightgrey;
   margin-bottom: 20px;
-  padding: 10px;
+  padding: 0.4rem;
 }
 
 .column {
