--- a/pages/day1.module.css
+++ b/pages/day1.module.css
@@ -24,11 +24,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100vh;
+  max-height: 100vh;
 }
 
 .row {
-  /* display: block; */
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -39,9 +38,33 @@
   color: white;
   padding: 10px;
   margin: 10px;
-  font-size: 18px;
+  font-size: 0.8rem;
   width: 150px;
   height: 150px;
   text-align: center;
   line-height: 130px;
 }
+
+@media screen and (max-width: 200px) {
+  .box {
+    height: 100px;
+    width: 100px;
+    font-size: 0.5rem;
+    padding: 5px;
+    margin: 5px;
+    line-height: 100px;
+  }
+}
+
+@media screen and (max-width: 150px) {
+  .box {
+    height: 50px;
+    width: 50px;
+    font-size: 0.5rem;
+    padding: 5px;
+    margin: 5px;
+    line-height: 50px;
+
+  }
+}
+
