--- a/pages/day1.module.css
+++ b/pages/day1.module.css
@@ -25,6 +25,8 @@
   flex-direction: column;
   align-items: center;
   max-height: 100vh;
+  /* flex-wrap: wrap; */
+  overflow-y: scroll;
 }
 
 .row {
@@ -45,7 +47,7 @@
   line-height: 130px;
 }
 
-@media screen and (max-width: 200px) {
+ @media screen and (max-width: 200px) {
   .box {
     height: 100px;
     width: 100px;
@@ -65,6 +67,20 @@
     margin: 5px;
     line-height: 50px;
 
+  } 
+} 
+
+
+@media screen and (min-width: 300px) {
+  .column {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .column {
+    flex-direction: row;
   }
 }
 
