--- a/pages/day1.module.css
+++ b/pages/day1.module.css
@@ -107,8 +107,19 @@
 @media screen and (max-width: 576px) {
   .box {
     background-color: rgb(51, 51, 205);
-
   }
+}
+
+@media screen (max-width: 768px) and (orientation: landscape) { 
+  .box {
+    background-color: greenyellow;
+  } 
+}
+
+@media screen and (max-width: 992px) { 
+  .box {
+    background-color: orange;
+  } 
 }
 
 
