--- a/pages/day1.module.css
+++ b/pages/day1.module.css
@@ -110,7 +110,7 @@
   }
 }
 
-@media screen (max-width: 768px) and (orientation: landscape) { 
+@media screen and (max-width: 768px) and (orientation: landscape) { 
   .box {
     background-color: greenyellow;
   } 
